--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,16 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
+        
+        <nav>
+          {% for item in site.data.navigation %}
+            <a href="{{ item.link }}">
+            {{ item.name }}
+            </a>
+          {% endfor %}
+        </nav>
+        
+        
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
